Fix rounded border not showing when VP count was disabled.

--- a/src/styles/player_home.less
+++ b/src/styles/player_home.less
@@ -81,7 +81,7 @@
         visibility: hidden;
     }
 
-    div:not(.tag-count):nth-of-type(16n) {
+    .grid_end {
         border-top-right-radius: 4px;
         border-bottom-right-radius: 4px;
     }
